# coman

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run.sh  setup.cfg
.github/workflows/: pypi-publish.yml
coma/: __init__.py  _version.py  cli.py  coma.py  env.py  spec.py  system.py
coman/: __init__.py  __main__.py  _version.py  cli.py  env.py  lock.py  spec.py  system.py  utils.py
coman/commands/: __init__.py  spec.py  utils.py
poco/: __init__.py  _version.py  poco.py
