[metadata]
name = poco
description = Better Conda/Mamba CLI
long_description = file: README.md
author = Wietse de Vries
author_email = wietse.de.vries@rug.com
url = https://github.com/wietsedv/poco
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
    click >=8.0.1
    conda-lock >=0.11.0
    ensureconda >=1.4.1
    ruamel.yaml >=0.17.10

[options.entry_points]
console_scripts =
    poco = poco:cli
